Second Commit for OpenClassrooms Project 7

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
               document.querySelector("header div:last-child img[alt$='knife']:nth-child(3)").style.transform = "rotate(180deg)";
           }, 5000);
       }
-      document.onload = spinCutlery();
+      spinCutlery();
     </script>
   </body>
 </html>
